--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ tokenizers>=0.15
 sentencepiece>=0.1.99
 pyyaml>=6.0
 accelerate>=0.33
+pytest>=7.0
 
 # Optional speedups on CUDA machines (ignored on MPS):
 # flash-attn>=2.5.8
+
