--- a/config_finetune.yaml
+++ b/config_finetune.yaml
@@ -4,7 +4,7 @@ model:
   n_heads: 12
   n_kv_heads: 2
   d_ff: 3072
-  dropout: 0.0
+  dropout: 0.05
   vocab_size: null
   rope_theta: 1000000
   tie_embeddings: true
@@ -16,29 +16,29 @@ training:
   seq_len: 1024
   micro_batch_size: 7
   grad_accum_steps: 8
-  max_steps: 5000
-  lr: 2.0e-5
+  max_steps: 20000
+  lr: 5.0e-5
   weight_decay: 0.01
   betas: [0.9, 0.95]
   eps: 1.0e-8
-  warmup_ratio: 0.01
+  warmup_ratio: 0.005
   precision: "bf16-mixed"
   steps_per_epoch: 100
-  ckpt_dir: "checkpoints_sft"
+  ckpt_dir: "checkpoints_sft_v2"
   base_ckpt_path: "checkpoints/final.ckpt"
 
   reduce_on_plateau:
     factor: 0.5
-    patience: 2
-    threshold: 0.001
+    patience: 4
+    threshold: 0.0005
     cooldown: 0
     min_lr: 1.0e-6
 
   early_stopping:
     enabled: true
-    patience: 3
-    min_delta: 0.001
-    warmup_fraction: 0.1
+    patience: 8
+    min_delta: 0.0005
+    warmup_fraction: 0.2
 
 hardware:
   accelerator: "cuda"
