--- a/config_finetune.yaml
+++ b/config_finetune.yaml
@@ -4,7 +4,7 @@ model:
   n_heads: 12
   n_kv_heads: 2
   d_ff: 3072
-  dropout: 0.05
+  dropout: 0.1
   vocab_size: null
   rope_theta: 1000000
   tie_embeddings: true
@@ -16,33 +16,33 @@ training:
   seq_len: 1024
   micro_batch_size: 7
   grad_accum_steps: 8
-  max_epochs: 50
+  max_epochs: 100
   max_steps: 0
-  lr: 2.0e-5
+  lr: 1.0e-5
   lr_schedule: "warmup_cosine"
   min_lr_ratio: 0.1
-  weight_decay: 0.0
+  weight_decay: 0.01
   betas: [0.9, 0.95]
   eps: 1.0e-8
-  warmup_ratio: 0.03
+  warmup_ratio: 0.05
   precision: "bf16-mixed"
   steps_per_epoch: 0
   ckpt_dir: "checkpoints"
   base_ckpt_path: "checkpoints/final.ckpt"
 
   reduce_on_plateau:
-    enabled: false
+    enabled: true
     factor: 0.5
-    patience: 4
+    patience: 2
     threshold: 0.0005
     cooldown: 0
     min_lr: 1.0e-6
 
   early_stopping:
-    enabled: false
-    patience: 8
+    enabled: true
+    patience: 6
     min_delta: 0.0005
-    warmup_fraction: 0.2
+    warmup_fraction: 0.1
 
 hardware:
   accelerator: "cuda"
